# dockmap

./: .gitignore  README.md  pyproject.toml
dockmap/: __init__.py  cli.py  clustering.py  io.py  mapproj.py  ppi.py  project.py  surface.py  util.py  viz.py
docs/: generate_methodology_infographic.py
examples/: README.md
examples/distro/: README.md  example_01_scatter_equirect.sh  example_02_trace.sh
examples/distro/data/: target_relevant_residues.txt
examples/distro/expected/: .gitkeep  docking_map_example_01_clusters.csv  docking_map_example_01_poses_mapped.csv  docking_map_example_01_ppi_contour_mapped.csv  docking_map_example_01_ppi_residue_points_mapped.csv  docking_map_example_02_poses_mapped.csv  docking_map_example_02_ppi_contour_mapped.csv  docking_map_example_02_ppi_residue_points_mapped.csv
