[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockmap"
version = "0.3.2"
description = "Protein surface 2D map of docking sites with QuickSurf-like surface and PPI overlay"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
trimesh = ["trimesh>=4.0", "rtree>=1.0"]
scipy = ["scipy>=1.8"]  # only if you want KDE/KDTree-based rendering (optional)

[project.scripts]
dockmap = "dockmap.cli:main"
